# lol_builds

./: .gitignore  README.md  build_finetune_dataset.py  cli.py  config.py  data_parser.py  data_visu.ipynb  db.py  finetune.py  finetune.sh  main.py  patch_diff.py  pipeline.py  process_for_llm.py  pyproject.toml  split_train_test.py
data/llama3b-qlora/checkpoint-1376/: rng_state.pth  scheduler.pt  trainer_state.json
data/llama3b-qlora/checkpoint-2064/: README.md  adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
data/unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothDDPOTrainer.py
matches_cache/: BR_matches.pkl  EUNE_matches.pkl  EUW_matches.pkl  JP_matches.pkl  KR_matches.pkl  LAN_matches.pkl  LAS_matches.pkl  NA_matches.pkl  OCE_matches.pkl
patch_diffs/: champion_new_15.7.1.json  champion_old_15.6.1.json  champion_patch_diff.json  champion_patch_important_summary.json  champion_patch_summary.json  item_mapping.json  item_old_15.6.1.json  item_patch_diff.json  item_patch_important_summary.json  item_patch_summary.json  runes_mapping.json  runes_mapping_15.7.1.json  summoner_spells_mapping_15.7.1.json
src/analysis/: data_visu.ipynb
src/core/finetune/: build_finetune_dataset.py  eval.py  evaluation_finetune.py  finetune.py  hfpush.py  metrics.py  process_for_llm.py
src/core/pipeline/: cli.py  config.py  data_parser.py  patch_diff.py  (+2 more)
src/scripts/: finetune.sh  run_full.sh
tests/: itemevents.py  process_for_llm.py  test_process_for_llm.py  timeline.json
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothDDPOTrainer.py
